--- a/style.css
+++ b/style.css
@@ -316,6 +316,7 @@ input {
   display: flex;
   align-items: center;
   justify-content: center;
+  text-align: center;
   padding-block: 0.5rem;
 }
 
@@ -468,4 +469,73 @@ input {
   left: 0;
   width: 100%;
   height: 1px;
+}
+
+@media (max-width: 1200px) {
+  .main-container {
+    width: 90%;
+  }
+
+  .main-box {
+    padding-inline: 2rem;
+  }
+
+  .sidebar {
+    padding: 1rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .sidebar {
+    display: none;
+  }
+
+  .nav ul {
+    display: none;
+  }
+}
+@media (max-width: 480px) {
+  .main-container {
+    width: 100%;
+    margin-top: 2rem;
+  }
+  .name-box {
+    flex-direction: column;
+  }
+
+  .main-box {
+    padding-inline: 1rem;
+  }
+
+  .title h2 {
+    font-size: 1.5rem;
+  }
+
+  .info-header p {
+    font-size: 0.8rem;
+  }
+
+  .info-header span {
+    display: none;
+  }
+
+  .form-box {
+    padding-top: 1rem;
+  }
+
+  .name-box {
+    gap: 1rem;
+  }
+
+  .help-box p {
+    font-size: 0.8rem;
+    line-height: 1.6;
+  }
+
+  .divider-top {
+    top: 5rem;
+  }
+  .divider {
+    top: 26rem;
+  }
 }
