--- a/style.css
+++ b/style.css
@@ -171,6 +171,10 @@ table {
   color: #1d2c3c;
   font-size: 0.875rem;
   font-weight: 700;
+  transition: all ease-in-out 0.3s;
+}
+.nav ul li a:hover {
+  color: #435c79;
 }
 
 button {
@@ -183,6 +187,12 @@ button {
   font-weight: 700;
   color: #1d2c3c;
   background-color: transparent;
+  transition: all ease-in-out 0.3s;
+}
+
+.nav button:hover {
+  background-color: #efefef;
+  border: 1px solid transparent;
 }
 
 .main-container {
@@ -284,8 +294,39 @@ input {
   padding-block: 1rem;
   padding-left: 1rem;
   border-radius: 0.5rem;
+  outline: none;
 }
 
+.input-box .email {
+  width: 70%;
+}
+
+.creditCard {
+  position: relative;
+}
+
+.placeholder {
+  position: absolute;
+  opacity: 60%;
+  display: flex;
+  width: 100%;
+  top: 0;
+  transform: translateY(50%);
+  justify-content: space-between;
+}
+
+.cardNum input {
+  outline: none;
+  width: 20rem;
+  border-radius: 0;
+}
+
+.ccv-wrap input {
+  padding-right: 1rem;
+  outline: none;
+  width: 6rem;
+  border-radius: 0;
+}
 .btn-box {
   width: 100%;
   height: auto;
@@ -298,6 +339,11 @@ input {
   background-color: #038e7d;
   color: #fff;
   padding-block: 1.2rem;
+  transition: all ease-in-out 0.5s;
+}
+
+.btn-box button:hover {
+  background-color: #007668;
 }
 
 .footer {
@@ -327,7 +373,8 @@ input {
 .help-box span {
   font-weight: 700;
 }
-.help-box a {
+.help-box a,
+.footer a {
   text-decoration: none;
   color: #548bc5;
 }
@@ -444,6 +491,10 @@ input {
   gap: 1rem;
 }
 
+blockquote {
+  font-style: italic;
+}
+
 .feedback-profile {
   display: flex;
   align-items: center;
@@ -469,6 +520,13 @@ input {
   left: 0;
   width: 100%;
   height: 1px;
+}
+
+.main {
+  margin-top: 5rem;
+}
+.main p {
+  color: #646e7a;
 }
 
 @media (max-width: 1200px) {
