--- a/style.css
+++ b/style.css
@@ -124,6 +124,10 @@ table {
   border-spacing: 0;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 .container {
   max-width: 1440px;
   margin: 0 auto;
@@ -193,6 +197,11 @@ button {
 .nav button:hover {
   background-color: #efefef;
   border: 1px solid transparent;
+}
+
+.menu-icon {
+  font-size: 2rem;
+  display: none;
 }
 
 .main-container {
@@ -309,28 +318,52 @@ input {
   position: absolute;
   opacity: 60%;
   display: flex;
+  align-items: center;
   width: 100%;
-  top: 0;
+  top: 0%;
   transform: translateY(50%);
+
   justify-content: space-between;
+}
+
+.cardNum {
+  width: 60%;
 }
 
 .cardNum input {
   outline: none;
-  width: 20rem;
-  border-radius: 0;
+  width: 100%;
+}
+
+.ccv-wrap {
+  width: 40%;
+  display: flex;
 }
 
 .ccv-wrap input {
   padding-right: 1rem;
   outline: none;
-  width: 6rem;
-  border-radius: 0;
+  width: 100%;
 }
+
+.mobile-input {
+  width: 100%;
+  height: auto;
+  display: none;
+}
+
+.mobile-input form {
+  gap: 0.5rem;
+}
+
+.mobile-input .input-box input {
+  width: 100%;
+}
+
 .btn-box {
   width: 100%;
   height: auto;
-  margin-top: 2rem;
+  margin-top: 4rem;
 }
 
 .btn-box button {
@@ -505,14 +538,6 @@ blockquote {
   border-radius: 50%;
 }
 
-.divider-top {
-  position: absolute;
-  background-color: rgba(216, 216, 216, 0.2);
-  top: 6rem;
-  left: 0;
-  width: 100%;
-  height: 1px;
-}
 .divider {
   position: absolute;
   background-color: rgba(216, 216, 216, 0.2);
@@ -522,8 +547,18 @@ blockquote {
   height: 1px;
 }
 
+.top {
+  top: 6rem;
+}
+
+.bottom {
+  top: 37.5rem;
+}
+
 .main {
   margin-top: 5rem;
+  text-align: center;
+  line-height: 1.4;
 }
 .main p {
   color: #646e7a;
@@ -557,6 +592,15 @@ blockquote {
     width: 100%;
     margin-top: 2rem;
   }
+
+  .nav button {
+    display: none;
+  }
+
+  .menu-icon {
+    display: block;
+  }
+
   .name-box {
     flex-direction: column;
   }
@@ -595,5 +639,30 @@ blockquote {
   }
   .divider {
     top: 26rem;
+  }
+
+  .bottom {
+  top: 43.5rem;
+}
+
+
+  .web-input {
+    display: none;
+  }
+
+  .mobile-input {
+    display: flex;
+  }
+
+  .main {
+    font-size: 0.8rem;
+  }
+
+  .input-box .email {
+    width: 100%;
+  }
+
+  .logo-box img {
+    width: 70%;
   }
 }
